# ownscript-lantern

./: Dockerfile  README.md  pyproject.toml
ownscript_lantern/: echo-server.py  lantern.py  lantern_handler.py  main.py  websocket.py
ownscript_lantern/lantern/: router.py
ownscript_lantern/pages/: router.py
ownscript_lantern/templates/: lantern.html
tests/: test_lantern.py
