[tool.poetry]
name = "ownscript-lantern"
version = "0.1.0"
description = ""
authors = ["Anthony Sazonov <jericho9378@gmail.com>"]
readme = "README.md"
packages = [{include = "ownscript_lantern"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
